# 2D-Sandbox-Game

./: .gitignore  CMakeLists.txt  README.md  heightmap.txt  noise_output.txt  worldnoise.txt
include/: Animation.h  Collider.h  Game.h  GameConstants.h  Map.h  PhysicsConstants.h  Platform.h  Player.h  PlayerConstants.h  PlayerState.h  TextureUtils.h  View.h
include/config/: GameConstants.h  MapConstants.h  PhysicsConstants.h  PlayerConstants.h  TileConstants.h
include/core/: Animation.h  Game.h  GameState.h  TextureUtils.h  View.h
include/entities/: Collider.h  Platform.h  Player.h
include/ui/: HealthBar.h  Inventory.h  InventorySlot.h  PauseMenu.h  StartMenu.h  TextInputDialog.h  UI.h  WorldSelectMenu.h
include/world/: Map.h  Tile.h  TileConstants.h  World.h  WorldManager.h
src/: Animation.cpp  Collider.cpp  Game.cpp  Map.cpp  Platform.cpp  Player.cpp  TextureUtils.cpp  View.cpp  main.cpp
src/core/: Animation.cpp  Game.cpp  TextureUtils.cpp  View.cpp
src/entities/: Collider.cpp  Platform.cpp  Player.cpp
src/systems/: Collider.cpp
src/ui/: HealthBar.cpp  Inventory.cpp  InventorySlot.cpp  PauseMenu.cpp  StartMenu.cpp  TextInputDialog.cpp  UI.cpp  WorldSelectMenu.cpp
src/world/: Map.cpp  Tile.cpp  World.cpp  WorldManager.cpp
worlds/: worlds.json
